# credit-detect

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  credit_detect.py  pyproject.toml
credit_detect/: __init__.py  __main__.py
scripts/jellyfin-plugin/: NuGet.Config  README.md  build.json
scripts/jellyfin-plugin/CreditDetect.Plugin/: CreditDetect.Plugin.csproj  Plugin.cs  PluginServiceRegistrator.cs
scripts/jellyfin-plugin/CreditDetect.Plugin/Configuration/: PluginConfiguration.cs  configPage.html
scripts/jellyfin-plugin/CreditDetect.Plugin/Data/: CreditSegment.cs
scripts/jellyfin-plugin/CreditDetect.Plugin/Providers/: CreditSegmentProvider.cs
scripts/jellyfin-plugin/CreditDetect.Plugin/ScheduledTasks/: CreditDetectionTask.cs
tests/: conftest.py  test_cli.py  test_credit_detector.py  test_credit_segment.py  test_frame_features.py  test_frame_info.py  test_io.py  test_resolve_ffmpeg.py  test_sanitise_video_path.py
